k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-server
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-server
  template:
    metadata:
      labels:
        app: oauth2-server
    spec:
      containers:
        - name: oauth2-server
          image: felixmurcia/oauth2server:v20260224-1540
          
          command: ["java"]
          args: ["-jar", "/app/app.jar", "--spring.profiles.active=prod"]

          ports:
            - containerPort: 8080
              hostPort: 30444

          volumeMounts:
            - name: oauth2-data
              mountPath: /data

      volumes:
        - name: oauth2-data
          persistentVolumeClaim:
            claimName: oauth2-pvc
